## 2.0.0 (, 2019)

* Added linter.
* Added jest as unit test framework.
* Added `.travis.yml` for running checks.
* Generated `app.js` to run e2e tests.
* Added `inputValidation` module.

## 1.4.5 (October 8, 2018)

* Updating SDK version to v10.4.0 which is the latest stable to the date. Adding tilde.
* Updating Lodash and Express for vulnerability fixes.

## 1.4.4 (June 4, 2018)

* Updating SDK version to v10.3.1 which is the latest stable to the date.

## 1.4.3 (March 8, 2018)

* Updating SDK version to v10.1.0 which is the latest stable to the date.

## 1.4.2 (Jan 12, 2018)

* Updating SDK version to v9.4.0 which is the latest stable to the date.
* Using caret range for SDK version.

## 1.4.1 (December 22, 2017)

* Updating SDK version to v9.3.7 which is the latest stable to the date.

## 1.4.0 (November 09, 2017)

* Internal code reordering. Moving to a routers structure.
* Moved `/machine` and `/version` to `/admin/machine` and `/admin/version`.
* Created `/admin/uptime`, `/admin/ping` and `/admin/healthcheck` endpoints.

## 1.3.1 (October 12, 2017)

* Updating SDK version to v9.3.6 which is the latest stable to the date.

## 1.3.0 (September 26, 2017)

* Rename to Split-Evaluator

## 1.2.2 (September 13, 2017)

* Updating SDK version to v9.3.5 which is the latest stable to the date.

## 1.2.1 (September 8, 2017)

* Added `/machine/` endpoint.

## 1.2.0 (September 7, 2017)
Note: We are using 1.2.0 to start in order to match the version of the
docker image on Docker Hub, which is currently 1.2. From now on we will have those
versions in sync.

* Updating SDK version to v9.3.4 which is the latest stable to the date.
* Updated README.md.
* Added NEWS.txt, CHANGES.txt and LICENSE files.
* Removed docker-hub support.
* Making SPLITIO_EXT_API_KEY header optional. If it is not set, it won't be required.
* Adding some logs and errors for better debugging.
* Modifying `/get-treatment` response to return the `splitName` field.